--- a/index.html
+++ b/index.html
@@ -34,6 +34,114 @@
               </div>
             </div>
           </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
+          <a class="utente " href="#">
+            <div class="dettagli-utente">
+              <div class="immagine"></div>
+              <div class="">
+                <p class="nome">flavio bernasconi</p>
+                <p class="messaggio">sfds fsda fsa</p>
+              </div>
+              <div class="">
+                <p class="ora-messaggio">10:05</p>
+              </div>
+            </div>
+          </a>
 
         </div>
 
@@ -76,17 +184,13 @@
 
     <div id="template">
 
-      <div class="contenitore-msg">
-        <div class='msg-inviato'>
+        <div class='texto msg-inviato'>
           <p class="testo-messaggio"></p>
         </div>
-      </div>
 
 
-      <div class="contenitore-msg-2">
-          <div class='msg-risp'>
-            <p>ok</p>
-          </div>
+        <div class='texto msg-risp'>
+          <p>ok</p>
         </div>
 
 
