--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
         </div>
 
 
-        <div class='texto msg-risp'>
+        <!-- <div class='texto msg-risp'>
           <p>ok</p>
-        </div>
+        </div> -->
 
 
 
