--- a/index.html
+++ b/index.html
@@ -148,29 +148,28 @@
 
 
       </div>
-      <div id="messaggi">
-        <div id="lista-messaggi">
-          <!-- qui incollo i miei messaggi inviati -->
 
+
+
+      <div class="contenitore">
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
         </div>
-
-
-
 
 
         <!-- barra dove scrivo e invio il messaggio  -->
+
         <div id="barra">
           <div class="smile"></div>
-
-
-          <input id="valmsg" placeholder="ciao scrivi">
-
+          <input id="valmsg" placeholder="ciao scrivi" />
           <div class="bottone-invio">
             <button id="send">invia</button>
           </div>
-
         </div>
       </div>
+
 
     </div>
 
@@ -192,9 +191,6 @@
         <!-- <div class='texto msg-risp'>
           <p>ok</p>
         </div> -->
-
-
-
 
 
     </div>
