--- a/index.html
+++ b/index.html
@@ -4,180 +4,228 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   </head>
   <body>
 
     <div class="container">
+
       <div id="barra-utenti">
         <div class="mio-profilo">
-          <div class="immagine-small"></div>
+          <div class="">
+            <img src="img.png" class="immagine-small"></img>
+          </div>
+          <div class="">
+            <i class="fa fa-cloud"></i>
+            <i class="fa fa-heart"></i>
+            <i class="fa fa-file"></i>
+          </div>
         </div>
         <div class="notifiche">
-          <div class="immagine"></div>
+          <div class="">
+            <img src="noti.png" class="immagine"></img>
+          </div>
+          <div class="">
+            <p>Ricevi notifiche messaggi</p>
+            <a href="">Attiva notifiche messaggi</a>
+          </div>
         </div>
 
         <input type="text" name="" value="" id="search">
 
 
         <div id="lista-utenti" >
+
           <a class="utente active" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">10:00</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
-          <a class="utente " href="#">
+
+          <a class="utente" href="#">
+            <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
-              <div class="immagine"></div>
-              <div class="">
+              <div class="ore">
                 <p class="nome">flavio bernasconi</p>
-                <p class="messaggio">sfds fsda fsa</p>
+                <p class="">13:54</p>
               </div>
               <div class="">
-                <p class="ora-messaggio">10:05</p>
+                <p class="messaggio">ciao come stai</p>
               </div>
             </div>
           </a>
+
+
+
+
+
+
+
+
+
 
         </div>
-
-
 
       </div>
 
 
 
       <div class="contenitore">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>Franco</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
+
+          <div class="">
+            <i class="fa fa-cloud"></i>
+            <i class="fa fa-heart"></i>
+            <i class="fa fa-file"></i>
+          </div>
+
+        </div>
+
         <div id="messaggi">
           <div id="lista-messaggi">
             <!-- qui incollo i miei messaggi inviati -->
           </div>
         </div>
 
-
         <!-- barra dove scrivo e invio il messaggio  -->
 
         <div id="barra">
-          <div class="smile"></div>
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
           <input id="valmsg" placeholder="ciao scrivi" />
           <div class="bottone-invio">
-            <button id="send">invia</button>
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
           </div>
         </div>
       </div>
 
-
     </div>
-
-
-
-
-
-
 
 
 
@@ -185,12 +233,13 @@
 
         <div class='texto msg-inviato'>
           <p class="testo-messaggio"></p>
+          <p class="orario"></p>
         </div>
 
 
-        <!-- <div class='texto msg-risp'>
+        <div class='texto msg-risp'>
           <p>ok</p>
-        </div> -->
+        </div>
 
 
     </div>
