--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <img src="img.png" class="immagine-small"></img>
           </div>
           <div class="">
-            <i class="fa fa-cloud"></i>
-            <i class="fa fa-heart"></i>
-            <i class="fa fa-file"></i>
+            <i class="fa fa-spinner" aria-hidden="true"></i>
+            <i class="fa fa-comment" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
           </div>
         </div>
         <div class="notifiche">
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <input type="text" name="" value="" id="search">
+        <input type="text" id="search">
 
 
         <div id="lista-utenti" >
@@ -43,7 +43,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Baffo</p>
                 <p class="">10:00</p>
               </div>
               <div class="">
@@ -56,7 +56,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Foust</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -69,7 +69,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Teo</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -82,7 +82,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Turco</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -95,7 +95,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Ame</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -108,7 +108,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Comin</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -121,7 +121,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Jack Omino</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -134,7 +134,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Valeee</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -147,7 +147,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Bea</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -160,7 +160,7 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">flavio bernasconi</p>
+                <p class="nome">Gigi</p>
                 <p class="">13:54</p>
               </div>
               <div class="">
@@ -168,14 +168,6 @@
               </div>
             </div>
           </a>
-
-
-
-
-
-
-
-
 
 
         </div>
@@ -197,9 +189,9 @@
           </div>
 
           <div class="">
-            <i class="fa fa-cloud"></i>
-            <i class="fa fa-heart"></i>
-            <i class="fa fa-file"></i>
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
           </div>
 
         </div>
