--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <input type="text" id="search">
+        <input type="text" id="search" value=""   type="text">
 
 
         <div id="lista-utenti" >
