--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div id="lista-utenti" >
 
-          <a class="utente active" href="#">
+          <a class="utente baffo active" href="#">
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
@@ -52,7 +52,7 @@
             </div>
           </a>
 
-          <a class="utente" href="#">
+          <a class="utente foust" href="#">
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
@@ -176,7 +176,7 @@
 
 
 
-      <div class="contenitore">
+      <div class="contenitore baffo active">
         <div id="barra-profilo">
           <div class="info">
               <div class="">
@@ -216,6 +216,63 @@
           </div>
         </div>
       </div>
+
+
+
+      <div class="contenitore foust">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>Franco</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
+
+          <div class="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </div>
+
+        </div>
+
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+        <!-- barra dove scrivo e invio il messaggio  -->
+
+        <div id="barra">
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
+          <input id="valmsg" placeholder="ciao scrivi" />
+          <div class="bottone-invio">
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </div>
 
