--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
               <div class="">
                 <div class="immagine-small"> </div>
               </div>
-              <div class="">
-                <h3>Franco</h3>
+              <div class="inserisci">
+                <h3>baffo</h3>
                 <p>ultimo accesso</p>
               </div>
           </div>
@@ -226,7 +226,7 @@
                 <div class="immagine-small"> </div>
               </div>
               <div class="">
-                <h3>Franco</h3>
+                <h3>faustooooo</h3>
                 <p>ultimo accesso</p>
               </div>
           </div>
