--- a/index.html
+++ b/index.html
@@ -121,19 +121,6 @@
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
-                <p class="nome">Jack Omino</p>
-                <p class="">13:54</p>
-              </div>
-              <div class="">
-                <p class="messaggio">ciao come stai</p>
-              </div>
-            </div>
-          </a>
-
-          <a class="utente" href="#">
-            <img src="img.png" class="immagine"></img>
-            <div class="dettagli-utente">
-              <div class="ore">
                 <p class="nome">Valeee</p>
                 <p class="">13:54</p>
               </div>
@@ -217,8 +204,6 @@
         </div>
       </div>
 
-
-
       <div class="contenitore foust">
         <div id="barra-profilo">
           <div class="info">
@@ -260,9 +245,292 @@
         </div>
       </div>
 
+      <div class="contenitore turco">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>turco</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
 
+          <div class="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </div>
 
+        </div>
 
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+        <!-- barra dove scrivo e invio il messaggio  -->
+
+        <div id="barra">
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
+          <input id="valmsg" placeholder="ciao scrivi" />
+          <div class="bottone-invio">
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="contenitore teo">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>teo</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
+
+          <div class="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </div>
+
+        </div>
+
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+        <!-- barra dove scrivo e invio il messaggio  -->
+
+        <div id="barra">
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
+          <input id="valmsg" placeholder="ciao scrivi" />
+          <div class="bottone-invio">
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="contenitore ame">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>ame</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
+
+          <div class="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </div>
+
+        </div>
+
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+        <!-- barra dove scrivo e invio il messaggio  -->
+
+        <div id="barra">
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
+          <input id="valmsg" placeholder="ciao scrivi" />
+          <div class="bottone-invio">
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="contenitore comin">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>comin</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
+
+          <div class="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </div>
+
+        </div>
+
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+        <!-- barra dove scrivo e invio il messaggio  -->
+
+        <div id="barra">
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
+          <input id="valmsg" placeholder="ciao scrivi" />
+          <div class="bottone-invio">
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="contenitore valeee">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>valeee</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
+
+          <div class="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </div>
+
+        </div>
+
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+        <!-- barra dove scrivo e invio il messaggio  -->
+
+        <div id="barra">
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
+          <input id="valmsg" placeholder="ciao scrivi" />
+          <div class="bottone-invio">
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="contenitore bea">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>bea</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
+
+          <div class="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </div>
+
+        </div>
+
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+        <!-- barra dove scrivo e invio il messaggio  -->
+
+        <div id="barra">
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
+          <input id="valmsg" placeholder="ciao scrivi" />
+          <div class="bottone-invio">
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="contenitore gigi">
+        <div id="barra-profilo">
+          <div class="info">
+              <div class="">
+                <div class="immagine-small"> </div>
+              </div>
+              <div class="">
+                <h3>gigi</h3>
+                <p>ultimo accesso</p>
+              </div>
+          </div>
+
+          <div class="">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <i class="fa fa-paperclip" aria-hidden="true"></i>
+            <i class="fa fa-ellipsis-v" aria-hidden="true"></i>
+          </div>
+
+        </div>
+
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+        <!-- barra dove scrivo e invio il messaggio  -->
+
+        <div id="barra">
+          <div class="smile">
+            <i class="fa fa-smile-o" aria-hidden="true"></i>
+          </div>
+          <input id="valmsg" placeholder="ciao scrivi" />
+          <div class="bottone-invio">
+            <a id="send">
+              <i class="fa fa-paper-plane" aria-hidden="true"></i>
+          </a>
+          </div>
+        </div>
+      </div>
 
 
 
