--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div id="lista-utenti" >
 
-          <a class="utente baffo active" href="#">
+          <a class="utente baffo " href="#">
             <img src="img.png" class="immagine"></img>
             <div class="dettagli-utente">
               <div class="ore">
@@ -162,8 +162,17 @@
       </div>
 
 
+      <div class="contenitore no-pad active">
 
-      <div class="contenitore baffo active">
+        <div id="messaggi">
+          <div id="lista-messaggi">
+            <!-- qui incollo i miei messaggi inviati -->
+          </div>
+        </div>
+
+      </div>
+
+      <div class="contenitore baffo ">
         <div id="barra-profilo">
           <div class="info">
               <div class="">
@@ -533,15 +542,6 @@
       </div>
 
 
-
-
-
-
-
-
-
-
-
     </div>
 
 
@@ -551,6 +551,15 @@
         <div class='texto msg-inviato'>
           <p class="testo-messaggio"></p>
           <p class="orario"></p>
+          <div class="drop">
+            <div class="rela">
+              <div class="abs">
+                <a href="#" class="nascondilo">nascondi</a>
+              </div>
+
+            </div>
+
+          </div>
         </div>
 
 
