aggiungo immagini dinamicamente

--- a/index.html
+++ b/index.html
@@ -263,10 +263,11 @@
           <div id="barra-profilo">
               <div class="info">
                   <div class="">
-                    <div class="immagine-small"> </div>
+                    <div class="immagine-small">
+                     </div>
                   </div>
                   <div class="inserisci">
-                    <h3>foust</h3>
+                    <h3>teo</h3>
                     <p>ultimo accesso <span></span></p>
                   </div>
               </div>
