--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="contenitore no-pad active">
 
         <div id="messaggi">
-          <div id="lista-messaggi">
+          <div class="lista-messaggi">
           </div>
         </div>
 
@@ -194,7 +194,7 @@
         </div>
 
             <div id="messaggi">
-              <div id="lista-messaggi">
+              <div class="lista-messaggi" id="style2">
                 <!-- qui incollo i miei messaggi inviati -->
               </div>
             </div>
@@ -238,7 +238,7 @@
             </div>
 
             <div id="messaggi">
-              <div id="lista-messaggi">
+              <div class="lista-messaggi">
                 <!-- qui incollo i miei messaggi inviati -->
               </div>
             </div>
@@ -282,7 +282,7 @@
           </div>
 
           <div id="messaggi">
-            <div id="lista-messaggi">
+            <div class="lista-messaggi">
               <!-- qui incollo i miei messaggi inviati -->
             </div>
           </div>
@@ -326,7 +326,7 @@
         </div>
 
         <div id="messaggi">
-          <div id="lista-messaggi">
+          <div class="lista-messaggi">
             <!-- qui incollo i miei messaggi inviati -->
           </div>
         </div>
@@ -370,7 +370,7 @@
       </div>
 
       <div id="messaggi">
-        <div id="lista-messaggi">
+        <div class="lista-messaggi">
           <!-- qui incollo i miei messaggi inviati -->
         </div>
       </div>
@@ -416,7 +416,7 @@
     </div>
 
     <div id="messaggi">
-      <div class="lista-messaggi" id="lista-messaggi">
+      <div class="lista-messaggi" class="lista-messaggi">
         <!-- qui incollo i miei messaggi inviati -->
       </div>
     </div>
@@ -462,7 +462,7 @@
     </div>
 
     <div id="messaggi">
-      <div id="lista-messaggi">
+      <div class="lista-messaggi">
         <!-- qui incollo i miei messaggi inviati -->
       </div>
     </div>
@@ -506,7 +506,7 @@
     </div>
 
     <div id="messaggi">
-      <div id="lista-messaggi">
+      <div class="lista-messaggi">
         <!-- qui incollo i miei messaggi inviati -->
       </div>
     </div>
@@ -551,7 +551,7 @@
     </div>
 
     <div id="messaggi">
-      <div id="lista-messaggi">
+      <div class="lista-messaggi">
         <!-- qui incollo i miei messaggi inviati -->
       </div>
     </div>
@@ -588,7 +588,7 @@
 
 
 
-    
+
 
     <script id="msgtemplate" type="text/x-handlebars-template">
       <div class='texto {{classeAggiunta}}'>
